fix horizontal scrolling in design tab

--- a/apps/opencloningdb/src/index.css
+++ b/apps/opencloningdb/src/index.css
@@ -4,4 +4,13 @@ body,
   height: 100%;
   margin: 0;
   overflow: hidden;
+  overflow-x: auto;
+}
+
+.tab-panels-container {
+  overflow-x: auto !important;
+}
+
+.app-container {
+  overflow-x: auto;
 }
